force-app/main/default/objects/Market_Snap__c/Market_Snap__c.object-meta.xml
<CustomObject>
    <label>Market Snap</label>
    <nameField>
        <displayFormat>MS-{0000000000}</displayFormat>
        <label>Market Snap</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>