force-app/main/default/objects/Market_Snap__c/fields/Est_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Est_Remaining__c</fullName>
    <label>$ Est. Remaining</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>