force-app/main/default/objects/Market_Snap__c/fields/Est_Total_Market__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Market__c</fullName>
    <label>$ Est. Total Market</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>