force-app/main/default/objects/Market_Snap__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>$ Avg Purchase</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>