force-app/main/default/objects/Market_Snap__c/fields/Market_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Close_Date__c</fullName>
    <label>Market Close Date</label>
    <type>Date</type>
</CustomField>