force-app/main/default/objects/Market_Snap__c/fields/Market_Day__c.field-meta.xml
<CustomField>
    <fullName>Market_Day__c</fullName>
    <label>Market Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>