force-app/main/default/objects/Market_Snap__c/fields/Market_Days_Remaing__c.field-meta.xml
<CustomField>
    <fullName>Market_Days_Remaing__c</fullName>
    <label>Market Days Remaing</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>