force-app/main/default/objects/Market_Snap__c/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <label>Market Project</label>
    <length>25</length>
    <type>Text</type>
</CustomField>