force-app/main/default/objects/Market_Snap__c/fields/Purchased__c.field-meta.xml
<CustomField>
    <fullName>Purchased__c</fullName>
    <label>% Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>