force-app/main/default/objects/Market_Snap__c/fields/Purchases__c.field-meta.xml
<CustomField>
    <fullName>Purchases__c</fullName>
    <label># Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>