force-app/main/default/objects/Market_Snap__c/fields/Total_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchases__c</fullName>
    <label>$ Total Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>