force-app/main/default/objects/Market_Snap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Total_Purchases__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>